# Parking-Management

./: CMakeLists.txt  Makefile  install.bat  install.sh
include/: gui.h  parking.h  queue.h  types.h
src/: cli.c  gui.c  main.c  parking.c  queue.c
